# asio_simply

./: CMakeLists.txt
examples/cpp11/: CMakeLists.txt
examples/cpp11/allocation/: CMakeLists.txt  server.cpp
examples/cpp11/chat/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  log_client.cpp  log_message.hpp  log_server.cpp
examples/cpp11/executors/: CMakeLists.txt  actor.cpp  bank_account_1.cpp  bank_account_2.cpp  fork_join.cpp  pipeline.cpp  priority_scheduler.cpp
examples/cpp11/service/: CMakeLists.txt  basic_logger.hpp  logger.hpp  logger_service.hpp  test_service.cpp
examples/cpp11/services/: CMakeLists.txt  basic_logger.hpp  daytime_client.cpp  logger_test.cpp
examples/cpp11/socks4/: socks4.hpp
examples/cpp11/spawn/: parallel_grep.cpp
examples/cpp11/timeouts/: CMakeLists.txt  async_tcp_client.cpp  blocking_tcp_client.cpp  blocking_token_tcp_client.cpp  server.cpp
examples/cpp11/timers/: CMakeLists.txt  periodic_timer.cpp  time_t_timer.cpp
examples/cpp14/: CMakeLists.txt
examples/cpp14/executors/: CMakeLists.txt  actor.cpp  async_1.cpp  async_2.cpp  bank_account_1.cpp  bank_account_2.cpp  fork_join.cpp  pipeline.cpp
examples/cpp17/coroutines_ts/: chat_server.cpp
include/: asio.hpp
include/asio/: basic_io_object.hpp  basic_waitable_timer.hpp  error.hpp  executor.hpp  handler_type.hpp  io_context.hpp  steady_timer.hpp  thread_pool.hpp  wait_traits.hpp
include/asio/buffer/: buffer.hpp  buffer_sequence_adapter.hpp  buffer_sequence_adapter.ipp  buffers_iterator.hpp  consuming_buffers.hpp  is_buffer_sequence.hpp
include/asio/core/: README  execution_context.hpp  io_context.hpp  operation.hpp  service_registry.hpp  system_context.hpp
include/asio/core/detail/: deadline_timer_service.hpp
include/asio/core/executor/: executor.hpp  executor_work_guard.hpp  is_executor.hpp  system_executor.hpp
include/asio/core/handler/: bind_handler.hpp  completion_handler.hpp  handler_cont_helpers.hpp  handler_continuation_hook.hpp  handler_invoke_helpers.hpp  handler_invoke_hook.hpp  handler_type_requirements.hpp  handler_work.hpp  wrapped_handler.hpp
include/asio/core/impl/: execution_context.hpp  execution_context.ipp  io_context.hpp  io_context.ipp  service_registry.hpp  service_registry.ipp  system_context.hpp  system_context.ipp
include/asio/core/scheduler/: README  scheduler.hpp  scheduler.ipp  scheduler_thread_info.hpp
include/asio/detail/: concurrency_hint.hpp  config.hpp  deadline_timer_service.hpp  handler_tracking.hpp  handler_tracking.ipp  is_executor.hpp  noncopyable.hpp  pop_options.hpp  push_options.hpp  service_registry.hpp  socket_ops.hpp  socket_ops.ipp  work_dispatcher.hpp
include/asio/detail/base/: conditionally_enabled_event.hpp  conditionally_enabled_mutex.hpp  event.hpp  fd_set_adapter.hpp  global.hpp  mutex.hpp  null_event.hpp  scoped_lock.hpp  scoped_ptr.hpp  signal_blocker.hpp  signal_init.hpp  static_mutex.hpp  time_traits.hpp  tss_ptr.hpp  wrapped_handler.hpp
include/asio/detail/container/: call_stack.hpp  op_queue.hpp
include/asio/detail/error/: error_code.hpp  error_code.ipp  system_error.hpp  throw_error.hpp  throw_error.ipp  throw_exception.hpp
include/asio/detail/impl/: service_registry.ipp
include/asio/detail/memory/: associated_allocator.hpp  handler_alloc_helpers.hpp  handler_alloc_hook.hpp  handler_alloc_hook.ipp  memory.hpp  object_pool.hpp  recycling_allocator.hpp
include/asio/detail/reactor/: epoll_reactor.hpp  reactor.hpp  reactor_fwd.hpp  reactor_op.hpp  reactor_op_queue.hpp  select_reactor.hpp  wait_op.hpp
include/asio/detail/scheduler/: scheduler.hpp  scheduler.ipp  scheduler_thread_info.hpp  timer_scheduler.hpp  timer_scheduler_fwd.hpp
include/asio/detail/thread/: fenced_block.hpp  thread.hpp  thread_context.hpp  thread_group.hpp  thread_info_base.hpp  thread_pool.hpp  thread_pool.ipp
include/asio/detail/tracking/: handler_tracking.hpp  handler_tracking.ipp
include/asio/error/: error.hpp  error.ipp  error_code.hpp  error_code.ipp  throw_error.hpp  throw_error.ipp
include/asio/executor/: associated_executor.hpp  async_result.hpp  bind_executor.hpp  execution_context.hpp  executor.hpp  executor.ipp  executor_function.hpp  executor_op.hpp  executor_work_guard.hpp  handler_type.hpp  is_executor.hpp  system_context.hpp  system_executor.hpp  uses_executor.hpp
include/asio/executor/helper/: associated_executor.hpp  async_result.hpp  bind_executor.hpp  uses_executor.hpp
include/asio/executor/impl/: execution_context.hpp  execution_context.ipp  executor.hpp  executor.ipp  (+3 more)
include/asio/impl/: io_context.hpp  io_context.ipp
include/asio/ip/: address.hpp  address_v4.hpp  address_v4_iterator.hpp  address_v4_range.hpp  address_v6.hpp  address_v6_iterator.hpp  address_v6_range.hpp  bad_address_cast.hpp  basic_endpoint.hpp  basic_resolver.hpp  basic_resolver_entry.hpp  basic_resolver_iterator.hpp  basic_resolver_query.hpp  basic_resolver_results.hpp  host_name.hpp  icmp.hpp  multicast.hpp  network_v4.hpp  network_v6.hpp  resolver_base.hpp  resolver_query_base.hpp  resolver_service.hpp  tcp.hpp  udp.hpp  unicast.hpp  v6_only.hpp
include/asio/network/: basic_datagram_socket.hpp  basic_raw_socket.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf_fwd.hpp  io_control.hpp  reactive_socket_service.hpp  reactive_socket_service_base.hpp  reactive_socket_service_base.ipp  resolve_endpoint_op.hpp  resolve_op.hpp  resolve_query_op.hpp  resolver_service.hpp  resolver_service_base.hpp  resolver_service_base.ipp  socket_base.hpp  socket_holder.hpp  socket_ops.hpp  socket_ops.ipp  socket_option.hpp  socket_types.hpp
include/asio/service/: README  deadline_timer_service.hpp  timer_scheduler.hpp  wait_handler.hpp
include/asio/timer/: basic_waitable_timer.hpp  steady_timer.hpp
include/asio/transmit/: base_from_completion_cond.hpp  completion_condition.hpp  connect.hpp  consuming_buffers.hpp  dependent_type.hpp  read.hpp  read_until.hpp  write.hpp
include/asio/ts/: buffer.hpp  executor.hpp  internet.hpp
(+126 files in other folders)
