
set(TARGET_NAME async_1)
add_executable(${TARGET_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/async_1.cpp)
install(TARGETS ${TARGET_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX})

set(TARGET_NAME async_2)
add_executable(${TARGET_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/async_2.cpp)
install(TARGETS ${TARGET_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX})

set(TARGET_NAME priority_scheduler)
add_executable(${TARGET_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/priority_scheduler.cpp)
install(TARGETS ${TARGET_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX})
